# mixer-operator

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Rocket.toml  package-lock.json  rustfmt.toml  todo.txt
.github/workflows/: docker-image.yml  docker-publish-stage-tag.yml  rust.yml
deploy/: .env.example  Dockerfile  README.md  docker-compose.stage.hoister.yml  docker-compose.stage.watchtower.yml  docker-compose.yml
migrations/2025-06-27-145711_initial_setup/: down.sql  up.sql
migrations/2025-07-01-003420_add_columns_status_and_datetime/: down.sql  up.sql
migrations/2025-09-05-233758_add_column_request_id/: down.sql  up.sql
src/: config.rs  executor.rs  lib.rs  logging.rs  main.rs  named_future.rs  schema.rs  spawn_task.rs  state.rs  worker.rs
src/api/: drafts.rs  error.rs  healthcheck.rs  mix.rs  mod.rs  note_drafts.rs
src/chain/: account.rs  chain_data.rs  errors.rs  mod.rs  sqlutils.rs  store.rs  sync.rs  transaction.rs
src/db/: mod.rs  schema.rs
src/db/models/: mod.rs  notes.rs
src/mixer/: bridge.rs  client.rs  mod.rs  utils.rs
src/rpc/: common.rs  errors.rs  mod.rs  worker.rs
src/rpc/commands/: block_header.rs  chain_tip.rs  client.rs  mod.rs
src/rpc2/: common.rs  mod.rs  requests.rs
src/sync/: mod.rs
src/task/: apalis.rs  mix.rs  mix_batch.rs  mod.rs  storage.rs  worker.rs
src/test/: logging.rs  mixing_flow.rs  mod.rs
src/test/integration/: mod.rs
src/transaction/: mod.rs
src/transaction/request/: builder.rs  mod.rs
tests/: mixing_flow.rs
