[package]
name = "mixer-operator"
version = "0.11.1"
edition = "2024"
rust-version = "1.89"
default-run = "mixer-operator"

[profile.release]
debug = true
lto = "thin"

[features]
default = ["tls"]
# enables rocket's built-in tls support
tls = ["rocket/tls"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bitflags = "2.9.1"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
# rocket_okapi = { version = "0.9.0", features = ["swagger"] }
# schemars = "1.0.4"
# use fork of these ^^^ 2 because of unmerged derive features and various fixes in upstream  
rocket_okapi = { git = "ssh://git@github.com/vakochetkov/okapi.git", branch = "not-rc-patch", features = ["swagger"] }
thiserror = "2.0.12"
tokio = "1.44.2"
tokio-util = "0.7.8"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
tracing-log = "0.2.0"
tracing-futures = { version = "0.2.5", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
diesel_cli = { version = "2.1", optional = true }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite", "tracing"] }

# NB: cannot use `sqlite` feature with sqlx/diesel because of `rusqlite` semver hazard
miden-bridge = { git = "ssh://git@github.com/arcane-finance-defi/miden-bridge-mono.git", branch = "main", features = ["std"] }
miden-client = { version = "0.11.11", features = ["tonic", "sqlite"] }
miden-objects = "0.11.5"
itertools = "0.14.0"

fang = { git = "ssh://git@github.com/ayrat555/fang.git" , rev = "31a5ac64f86448e5ab736eaad227c366d4aece0a", features = ["asynk-postgres", "migrations-postgres" ], default-features = false }
uuid = "1.18.1"
typetag = "0.2.20"


# TODO
# apalis = { version = "0.7.3", default-features = false, features = [
#     "tracing",
#     "retry",
# ] }
# apalis-cron = { version = "0.7.3" }
# apalis-core = { version = "0.7.3", default-features = false }
# apalis-sql = { version = "0.7.3", default-features = false, features = [
#     "postgres",
#     "tokio-comp",
# ] }

# ! DEPRECATED 
# sqlx = { version = "=0.8.1", features = ["sqlite"] }
# rusqlite = "=0.37"

# apalis-core = { features = ["tokio-comp"], version = "0.4" }
# apalis-sql = { features = ["postgres", "migrate"], version = "0.4" }
# sqlx = { features = ["runtime-tokio-native-tls"], version = "0.6"}

# apalis = { version = "0.7.3", features = ["retry"] }
# apalis-sql = { version = "0.7.3", features = ["postgres"] }
# apalis-cron = { version = "0.7.3" }
# sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"], default-features = false  }

# [dependencies.libsqlite3-sys]
# version = "0.34"
# features = ["bundled"]

# [patch.crates-io]
# libsqlite3-sys = "0.34.0" # Force the use of the newer version

# libsqlite3-sys = { version = "0.34" }

[dev-dependencies]
tempfile = "3.23.0"
