[package]
name = "mixer-operator"
version = "0.12.3"
edition = "2024"
rust-version = "1.90"
default-run = "mixer-operator"

[profile.release]
debug = true
lto = "thin"

[features]
default = ["tls"]
# enables rocket's built-in tls support
tls = ["rocket/tls"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bitflags = "2.9.1"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
itertools = "0.14.0"
once_cell = "1.21.3"
rand = "0.9.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
# rocket_okapi = { version = "0.9.0", features = ["swagger"] }
# schemars = "1.0.4"
# use fork of these ^^^ 2 because of unmerged derive features and various fixes in upstream  
rocket_okapi = { git = "ssh://git@github.com/vakochetkov/okapi.git", branch = "not-rc-patch", features = ["swagger"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.8"
tokio-stream = "0.1.17"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
tracing-log = "0.2.0"
tracing-futures = { version = "0.2.5", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
diesel_cli = { version = "2.1", optional = true }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite", "tracing"] }

fang = { git = "ssh://git@github.com/ayrat555/fang.git" , rev = "31a5ac64f86448e5ab736eaad227c366d4aece0a", features = ["asynk-postgres", "migrations-postgres" ], default-features = false }
uuid = "1.18.1"
typetag = "0.2.20"


# TODO
# apalis = { version = "0.7.3", default-features = false, features = [
#     "tracing",
#     "retry",
# ] }
# apalis-cron = { version = "0.7.3" }
# apalis-core = { version = "0.7.3", default-features = false }
# apalis-sql = { version = "0.7.3", default-features = false, features = [
#     "postgres",
#     "tokio-comp",
# ] }

# NB: cannot use `sqlite` feature with sqlx/diesel because of `rusqlite` semver hazard
# miden-client = { version = "0.11.11", features = ["tonic", "sqlite"] }
miden-client = { version = "0.12.3", features = ["std", "tonic"] }
miden-client-sqlite-store = { version = "0.12" }
miden-objects = "0.12.3"
log = "0.4.28"

[dependencies.miden-bridge]
git = "ssh://git@github.com/arcane-finance-defi/miden-bridge-mono.git"
features = ["std"]

[dev-dependencies]
tempfile = "3.23.0"
#
#[patch.crates-io]
#miden-client = { version = "0.12", git = "https://github.com/0xMiden/miden-client", rev = "fb6b71a60d526e2c0135bda57b64070e825b9da8"}
